--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -1,25 +1,10 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Spaces</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @spaces.each do |space| %>
-      <tr>
-        <td><%= link_to 'Show', space %></td>
-        <td><%= link_to 'Edit', edit_space_path(space) %></td>
-        <td><%= link_to 'Destroy', space, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<h1 class="title"><small>Spaces for:</small><%= tenant.tenant_name %></h1>
+<br>
+<% spaces.each do |space| %>
+  <h2><%= link_to space.space_name, tenant_space_path(id: space.id) %></h2>
+  <%= render 'calendar_mini', space: space %>
+<% end %>
 
 <br>
 
-<%= link_to 'New Space', new_space_path %>
+<%# link_to 'New Space', new_tenant_space_path %>
