--- a/app/views/spaces/_calendar_mini.html.erb
+++ b/app/views/spaces/_calendar_mini.html.erb
@@ -1,4 +1,4 @@
-<div class="column is-4">
+<div class="column">
   <div class="calendar">
   <div class="calendar-nav">
     <div class="calendar-nav-left">
