--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CalendarCommons</title>
+    <title>SharedSpaces</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   </head>
 
-  <body style="background-color:SkyBlue;">
+  <body style="background-color:AliceBlue;">
     <p class="notice" id="notice"><%= notice %></p>
     <p class="alert"  id="alert"><%= alert %></p>
 
@@ -21,7 +21,7 @@
       <div class="navbar-brand">
         <a class="navbar-item" href="/">
           <h1 id="title" class="navbar-item">
-            CalComs
+            SharedSpace
           </h1>
         </a>
 
