--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -25,8 +25,13 @@
       <div class="columns is-multiline">
       <% tenant.spaces.each do |space| %>
         <div class="column is-half-desktop is-one-third-fullhd is-centered">
-          <p class="title is-5"><%= link_to "#{space.space_name}", tenant_space_path(id: space.id, tenant_id: tenant.id), class: "card-footer-item" %></p>
-          <%= render 'spaces/calendar_mini', space: space, tenant: tenant %>
+          <p class="title is-5">
+            <%= link_to "#{space.space_name}",
+                        tenant_space_path(id: space.id, tenant_id: tenant.id),
+                        class: "card-footer-item" %>
+          </p>
+          <%= render 'spaces/calendar_mini',
+                        space: space, tenant: tenant, calendar: calendar %>
         </div>
       <% end %>
       </div>
