--- a/app/views/spaces/_calendar_mini.html.erb
+++ b/app/views/spaces/_calendar_mini.html.erb
@@ -1,3 +1,45 @@
+<!--  -->
+<div class="column">
+  <div class="calendar">
+    <div class="calendar-nav">
+      <div class="calendar-nav-left">
+        <%= link_to root_path(date: calendar.prev_month_string), class: "button is-link" do %>
+          <i class="fa fa-chevron-left"></i>
+        <% end %>
+      </div>
+      <div><%= calendar.full_month_name %> <%= calendar.year_number %></div>
+      <div class="calendar-nav-right">
+        <%= link_to root_path(date: calendar.next_month_string), class: "button is-link" do %>
+          <i class="fa fa-chevron-right"></i>
+        <% end %>
+      </div>
+    </div>
+    <div class="calendar-container">
+      <div class="calendar-header">
+        <div class="calendar-date"><%= I18n.t("date.week_day.mon") %></div>
+        <div class="calendar-date"><%= I18n.t("date.week_day.tue") %></div>
+        <div class="calendar-date"><%= I18n.t("date.week_day.wed") %></div>
+        <div class="calendar-date"><%= I18n.t("date.week_day.thu") %></div>
+        <div class="calendar-date"><%= I18n.t("date.week_day.fri") %></div>
+        <div class="calendar-date"><%= I18n.t("date.week_day.sat") %></div>
+        <div class="calendar-date"><%= I18n.t("date.week_day.sun") %></div>
+      </div>
+
+      <div class="calendar-body">
+        <% calendar.date_range.each do |day| %>
+          <div class="<%= calendar.date_class_string(day) %>">
+            <button class="<%= calendar.date_item_string(day) %>">
+              <%= day.mday %>
+            </button>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<br><br>
+
 <div class="column">
   <div class="calendar">
   <div class="calendar-nav">
