rename event_name and show events on calendars

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -7,6 +7,9 @@
       <p class="subtitle">
         Where groups come to share their space schedule.
       </p>
+      <p class="subtitle">
+        <%= link_to "Find your group.", tenants_path %>
+      </p>
     </div>
   </div>
 </section>
