change like to a button for better visitibility

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -7,9 +7,7 @@
       <p class="subtitle">
         Where groups come to share their space schedule.
       </p>
-      <p class="subtitle">
-        <%= link_to "Find your group.", tenants_path %>
-      </p>
+      <%= link_to "Public Groups", tenants_path, class: "button hero-button is-light" %>
     </div>
   </div>
 </section>
