modal forms to manage reservations

--- a/app/views/spaces/_calendar_mini.html.erb
+++ b/app/views/spaces/_calendar_mini.html.erb
@@ -28,9 +28,11 @@
       <div class="calendar-body">
         <% calendar.date_range.each do |day| %>
           <div class="<%= calendar.date_class_string(day) %>">
+            <!-- -->
             <button data-html="true"
-                    class="<%= calendar.date_item_class_string(day, reservations: space.reservations) %>"
-                    data-tooltip="<%= calendar.date_item_tooltip_data(day, reservations: space.reservations) %>">
+                    data-target="<%= calendar.choose_modal_form(day, reservations: space.reservations) %>"
+                    data-tooltip="<%= calendar.date_item_tooltip_data(day, reservations: space.reservations) %>"
+                    class="date-item <%= calendar.date_item_class_string(day, reservations: space.reservations) %>">
               <%= day.mday %>
             </button>
           </div>
@@ -39,6 +41,94 @@
     </div>
   </div>
 </div>
+
+<div id="new-reservation-form" class="modal">
+  <div class="modal-background"></div>
+  <div class="modal-card">
+    <header class="modal-card-head">
+      <p class="modal-card-title">New Reservation</p>
+      <button class="delete" aria-label="close"></button>
+    </header>
+    <section class="modal-card-body">
+      New Form
+    </section>
+    <footer class="modal-card-foot">
+      <button class="button is-success">Save changes</button>
+      <button class="button">Cancel</button>
+    </footer>
+  </div>
+</div>
+
+<div id="edit-reservation-form" class="modal">
+  <div class="modal-background"></div>
+  <div class="modal-card">
+    <header class="modal-card-head">
+      <p class="modal-card-title">Edit Reservation</p>
+      <button class="delete" aria-label="close"></button>
+    </header>
+    <section class="modal-card-body">
+      Edit Form
+    </section>
+    <footer class="modal-card-foot">
+      <button class="button is-success">Save changes</button>
+      <button class="button">Cancel</button>
+    </footer>
+  </div>
+</div>
+
+<script type="text/javascript">
+// 'use strict';
+
+document.addEventListener('DOMContentLoaded', function () {
+
+  // Modals
+
+  var rootEl = document.documentElement;
+  var $modals = getAll('.modal');
+  var $modalButtons = getAll('.modal-button');
+  var $modalCloses = getAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .button');
+
+  if ($modalButtons.length > 0) {
+    $modalButtons.forEach(function ($el) {
+      $el.addEventListener('click', function () {
+        var target = $el.dataset.target;
+        var $target = document.getElementById(target);
+        rootEl.classList.add('is-clipped');
+        $target.classList.add('is-active');
+      });
+    });
+  }
+
+  if ($modalCloses.length > 0) {
+    $modalCloses.forEach(function ($el) {
+      $el.addEventListener('click', function () {
+        closeModals();
+      });
+    });
+  }
+
+  document.addEventListener('keydown', function (event) {
+    var e = event || window.event;
+    if (e.keyCode === 27) {
+      closeModals();
+    }
+  });
+
+  function closeModals() {
+    rootEl.classList.remove('is-clipped');
+    $modals.forEach(function ($el) {
+      $el.classList.remove('is-active');
+    });
+  }
+
+  // Functions
+
+  function getAll(selector) {
+    return Array.prototype.slice.call(document.querySelectorAll(selector), 0);
+  }
+
+});
+</script>
 
 <br><br>
 
