document js sources

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,11 +90,15 @@
 
     <footer class="footer is-light">
       <div class="container">
-        Copyright © 2019 CalendarCommons. All rights reserved.
+        Copyright © 2020 CalendarCommons. All rights reserved.
       </div>
     </footer>
 
     <script type="text/javascript">
+      'use strict';
+
+      // https://versions.bulma.io/0.7.0/documentation/components/navbar/
+
       document.addEventListener('DOMContentLoaded', () => {
 
         // Get all "navbar-burger" elements
