landing and root page test (no JS)

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,11 +1,13 @@
+<p hidden id='landing_index' class='pageName'>Landing Index</p>
+
 <section class="hero is-primary">
   <div class="hero-body">
     <div class="container">
       <p class="title">
-        SharedSpaces
+        Shared Schedules
       </p>
       <p class="subtitle">
-        Where groups come to share their space schedule.
+        Where groups come to share their space and schedule and keep informed.
       </p>
       <%= link_to "Publicly Listed Groups", tenants_path,
                   class: "button hero-button is-light" %>
