updated name in calendar modal

--- a/app/views/spaces/_calendar_mini.html.erb
+++ b/app/views/spaces/_calendar_mini.html.erb
@@ -41,7 +41,7 @@
   </div>
 </div>
 
-<div id="new-reservation-form" class="modal">
+<div id="reservation-new" class="modal">
   <div class="modal-background"></div>
   <div class="modal-card">
     <header class="modal-card-head">
@@ -49,7 +49,7 @@
       <button class="delete" aria-label="close"></button>
     </header>
     <section class="modal-card-body">
-      New Form
+      New Reservation
     </section>
     <footer class="modal-card-foot">
       <button class="button is-success">Save changes</button>
@@ -58,15 +58,15 @@
   </div>
 </div>
 
-<div id="edit-reservation-form" class="modal">
+<div id="reservation-details" class="modal">
   <div class="modal-background"></div>
   <div class="modal-card">
     <header class="modal-card-head">
-      <p class="modal-card-title">Edit Reservation</p>
+      <p class="modal-card-title">Show / Edit Reservation</p>
       <button class="delete" aria-label="close"></button>
     </header>
     <section class="modal-card-body">
-      Edit Form
+      Show / Edit Form
     </section>
     <footer class="modal-card-foot">
       <button class="button is-success">Save changes</button>
