--- a/app/views/tenants/_tenant_card.html.erb
+++ b/app/views/tenants/_tenant_card.html.erb
@@ -21,8 +21,8 @@
   </div>
 
   <footer class="card-footer">
-    <%= link_to 'Show', tenant_path(tenant), class: "card-footer-item" %>
-    <%# link_to 'Edit', edit_tenant_path(tenant), class: "card-footer-item" %>
+    <%= link_to 'Calendar', tenant_path(tenant), class: "card-footer-item" %>
+    <%# link_to 'Configure', edit_tenant_path(tenant), class: "card-footer-item" %>
     <%# link_to 'Destroy', tenant, method: :delete, data: { confirm: 'Are you sure?' }, class: "card-footer-item" %>
   </footer>
 </div>
