--- a/app/views/spaces/_calendar_mini.html.erb
+++ b/app/views/spaces/_calendar_mini.html.erb
@@ -29,6 +29,7 @@
         <% calendar.date_range.each do |day| %>
           <div class="<%= calendar.date_class_string(day) %>">
             <button data-html="true"
+                    data-href="/tenant/2/space/3/reservations?date=2020-12-20" # json call
                     data-target="<%= calendar.choose_modal_form(day, reservations: space.reservations) %>"
                     data-tooltip="<%= calendar.date_item_tooltip_data(day, reservations: space.reservations) %>"
                     class="date-item <%= calendar.date_item_class_string(day, reservations: space.reservations) %>">
@@ -48,7 +49,7 @@
       <p class="modal-card-title">New Reservation</p>
       <button class="delete" aria-label="close"></button>
     </header>
-    <section class="modal-card-body">
+    <section id="reservation-new-body" class="modal-card-body">
       New Reservation
     </section>
     <footer class="modal-card-foot">
@@ -65,7 +66,7 @@
       <p class="modal-card-title">Show / Edit Reservation</p>
       <button class="delete" aria-label="close"></button>
     </header>
-    <section class="modal-card-body">
+    <section id="reservation-details-body" class="modal-card-body">
       Show / Edit Form
     </section>
     <footer class="modal-card-foot">
