--- a/app/views/reservations/_modal.html.erb
+++ b/app/views/reservations/_modal.html.erb
@@ -2,15 +2,15 @@
   <div class="modal-background"></div>
   <div class="modal-card">
     <header class="modal-card-head">
-      <p class="modal-card-title">Reservations</p>
+      <p class="modal-card-title">Reservation(s)</p>
       <button class="delete" aria-label="close"></button>
     </header>
-    <section class="modal-card-body">
-      Show day (allow to edit if logged in)
+    <section id="reservation-details-body" class="modal-card-body">
+      List Reservations
     </section>
     <footer class="modal-card-foot">
-      <button class="button is-success">Save changes</button>
-      <button class="button">Cancel</button>
+      <button class="button is-success">Edit</button>
+      <button class="button">Dismiss</button>
     </footer>
   </div>
 </div>
