--- a/app/views/tenants/show.html.erb
+++ b/app/views/tenants/show.html.erb
@@ -1,3 +1,11 @@
+<% content_for :head do %>
+  <!--
+  https://github.com/turbolinks/turbolinks#ensuring-specific-pages-trigger-a-full-reload
+  https://stackoverflow.com/questions/39627881/jquery-plugin-initialization-on-browser-back-button-for-turbolinks-rails-5/39801052
+  -->
+  <meta name="turbolinks-visit-control" content="reload">
+<% end %>
+
 <p hidden id='tenant_show_<%= tenant.id %>' class='pageName'>tenant_show_<%= tenant.id %></p>
 
 <div class="container">
